I added code to up the reference count of the database connection reference. This change fixes bug #11489 in php version 4.0.6. I derived this fix from the my_sql module.